# Awesome-Repository

./: README.en.md  README.fr.md  README.id.md  README.ko.md  README.md  README.ru.md  README.zh-CN.md  README.zh-TW.md  main.rs  unko.c  unko.js  unko.py  unko.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: actionlint.yml  assign-issues.yml  assign-pr.yml  build.yml  chatgpt-review.yml  cr.yml  lint-code.yml  release-drafter.yml  release.yml  stale.yml  test.yml  translate-readme.yml
docs/: README.md  branch.md  commit.md
go/: .goreleaser.yaml
rust/: Cargo.toml  build.yml  release.yml  test.yml
rust/scripts/: name.rs
